Fixed list alignment on text block

--- a/assets/tailwind-compiled.css
+++ b/assets/tailwind-compiled.css
@@ -709,6 +709,10 @@
     margin-bottom: 0px
 }
 
+.\[\&\>ul\]\:text-left>ul {
+    text-align: left
+}
+
 .\[\&_br\]\:hidden br {
     display: none
 }
